some more visual fixes, border radius, better spacing between text and buttons within forms.

--- a/src/components/RoomList/RoomList.css
+++ b/src/components/RoomList/RoomList.css
@@ -1,3 +1,11 @@
 .room-li {
   float: none;  /* Cancel default li float: left */
 }
+
+.submit-text {
+  border-radius: 5px;
+}
+
+.submit-button {
+  border-radius: 5px;
+}
